--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Docker Compose
+        run: docker-compose --version
+
       - name: Start PostgreSQL with Docker Compose
-        run: docker-compose up -d
+        run: docker-compose up &
