--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker Compose
-        run: docker-compose --version
+        run: docker compose --version
 
       - name: Start PostgreSQL with Docker Compose
-        run: docker-compose up &
+        run: docker compose up &
