--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,6 @@ jobs:
         run: docker compose --version
 
       - name: Start PostgreSQL with Docker Compose
-        run: docker compose up &
+        run: |
+          pwd 
+          docker compose up -d
