--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,7 @@ jobs:
         run: docker compose --version
 
       - name: Start PostgreSQL with Docker Compose
-        run: |
-          pwd 
-          docker compose -f lab1/docker-compose.yml up -d
+        run: docker compose -f lab1/docker-compose.yml up -d
 
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -35,3 +33,12 @@ jobs:
       - name: Test backend
         working-directory: ./lab1/backend
         run: mvn test
+
+      - name: Set up Node JS
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install frontend dependencies
+        working-directory: ./lab1/frontend
+        run: npm install
