--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
         working-directory: ./lab1/frontend
         run: npm install
 
-      - name: Run frontend
+      - name: Build frontend
         working-directory: ./lab1/frontend
-        run: npm start
+        run: npm run build
 
       - name: Test backend
         working-directory: ./lab1/backend
