--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,10 @@ jobs:
         working-directory: ./lab1/backend
         run: mvn test
 
+      - name: Install frontend dependencies
+        working-directory: ./lab1/frontend
+        run: npm install
+
       - name: Test frontend
         working-directory: ./lab1/frontend
         run: npm test -- --watchAll=false
