--- a/lab1/backend/src/main/resources/application.properties
+++ b/lab1/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=library
 
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/library
+spring.datasource.url=jdbc:postgresql://${DB_HOST:127.0.0.1}:5432/library
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
