--- a/lab1/terraform/meta.yaml
+++ b/lab1/terraform/meta.yaml
@@ -5,7 +5,8 @@ users:
     shell: /bin/bash
     sudo: ['ALL=(ALL) NOPASSWD:ALL']
     ssh_authorized_keys:
-      - ${ssh_public_key}
+      - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILv3myr1jU9B/rEvLPAxsvOGm1QTEz0mdHic7FhqEr6K pavel@debian-laptop
+      - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEf2tSZ8i9kZvwM3On8neMlB+jJy8yU34s3yF+BSGP71 user@WINDOWS-QFD8JJ4
 
 write_files:
   - path: "/usr/local/etc/init.sh"
