--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,13 +79,13 @@ jobs:
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: ./lab1/backend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/itmo-devops-library-backend-vl:latest
 
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
+          context: ./lab1/frontend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/itmo-devops-library-frontend-vl:latest
