--- a/lab1/backend/Dockerfile
+++ b/lab1/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM openjdk:23-slim
 WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 COPY ./target/*.jar /app/app.jar
 EXPOSE 8080
 CMD ["java", "-jar", "app.jar"]
