--- a/lab1/backend/Dockerfile
+++ b/lab1/backend/Dockerfile
@@ -1,8 +1,10 @@
+FROM openjdk:23-slim AS builder
+WORKDIR /app
+COPY . .
+RUN ./mvnw package -DskipTests
+
 FROM openjdk:23-slim
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
-COPY ./target/*.jar /app/app.jar
+COPY --from=builder /app/target/*.jar ./app.jar
 EXPOSE 8080
 CMD ["java", "-jar", "app.jar"]
