--- a/lab1/backend/Dockerfile
+++ b/lab1/backend/Dockerfile
@@ -1,9 +1,9 @@
-FROM maven:3.9.6-eclipse-temurin-23 AS builder
+FROM maven:3.9.6-eclipse-temurin-21 AS builder
 WORKDIR /app
 COPY . .
 RUN mvn package -DskipTests
 
-FROM openjdk:23-slim
+FROM eclipse-temurin:21-jdk
 WORKDIR /app
 COPY --from=builder /app/target/*.jar ./app.jar
 EXPOSE 8080
