--- a/lab1/backend/src/main/resources/application.properties
+++ b/lab1/backend/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.security.enabled=true
+
+metrics.export.prometheus.enabled=true
