--- a/lab1/docker-compose.yml
+++ b/lab1/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       DB_HOST: postgres
     expose:
       - 8080
+    ports:
+      - "8080:8080"
     depends_on:
       - postgres
     networks:
