--- a/lab1/prometheus.yml
+++ b/lab1/prometheus.yml
@@ -3,8 +3,9 @@ global:
 
 scrape_configs:
   - job_name: "backend"
+    metrics_path: /actuator/prometheus
     static_configs:
-      - targets: ["backend:8080"]
+      - targets: ["itmo-devops-library-backend-vl-container:8080"]
 
 remote_write:
   - url: 'https://monitoring.api.cloud.yandex.net/prometheus/workspaces/mon4qajkk17258krfi6g/api/v1/write'
