--- a/lab1/prometheus.yml
+++ b/lab1/prometheus.yml
@@ -7,14 +7,14 @@ scrape_configs:
     static_configs:
       - targets: ["itmo-devops-library-backend-vl-container:8080"]
 
-remote_write:
-  - url: 'https://monitoring.api.cloud.yandex.net/prometheus/workspaces/mon4qajkk17258krfi6g/api/v1/write'
-    bearer_token_file: 'ajeqnqo3grff5urh3dna'
-    queue_config:
-      max_samples_per_send: 2000
-      min_backoff: 100ms
-      max_backoff: 15s
-      retry_on_http_429: true
-    metadata_config:
-      send: false
+# remote_write:
+  # - url: 'https://monitoring.api.cloud.yandex.net/prometheus/workspaces/mon4qajkk17258krfi6g/api/v1/write'
+    # bearer_token_file: 'ajeqnqo3grff5urh3dna'
+    # queue_config:
+      # max_samples_per_send: 2000
+      # min_backoff: 100ms
+      # max_backoff: 15s
+      # retry_on_http_429: true
+    # metadata_config:
+      # send: false
 
