--- a/lab1/backend/src/main/resources/application.properties
+++ b/lab1/backend/src/main/resources/application.properties
@@ -14,4 +14,6 @@ management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.security.enabled=true
 
+management.metrics.export.prometheus.enabled=true
+
 metrics.export.prometheus.enabled=true
