--- a/lab1/docker-compose.yml
+++ b/lab1/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       - "9090:9090"
     depends_on:
       - backend
+    networks:
+      - devops_network
   postgres:
     image: postgres:latest
     container_name: postgres_container
