--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,9 +99,11 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Build with Maven
+        working-directory: ./lab1/backend
         run: mvn clean verify
 
       - name: SonarCloud Scan
+        working-directory: ./lab1/backend
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
