--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=chetter14_devops
 sonar.organization=chetter14
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=library
