Add artifact uploading and downloading between jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,20 @@ jobs:
       - name: Test frontend with coverage
         working-directory: ./lab1/frontend
         run: npm test -- --watchAll=false --coverage --coverageReporters=lcov
+
+      - name: Upload Backend Coverage
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-coverage
+          path: lab1/backend/target/site/jacoco/jacoco.xml
+
+      - name: Upload Frontend Coverage
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-coverage
+          path: lab1/frontend/coverage/lcov.info
     
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -97,7 +111,19 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
+      - name: Download backend coverage
+        uses: actions/download-artifact@v3
+        with:
+          name: backend-coverage
+          path: lab1/backend/target/site/jacoco
+      
+      - name: Download frontend coverage
+        uses: actions/download-artifact@v3
+        with:
+          name: frontend-coverage
+          path: lab1/frontend/coverage
+
       - name: Build with Maven
         working-directory: ./lab1/backend
         run: mvn clean verify
@@ -111,7 +137,8 @@ jobs:
             -Dsonar.projectKey=chetter14_devops \
             -Dsonar.organization=chetter14 \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.token=$SONAR_TOKEN
+            -Dsonar.token=$SONAR_TOKEN \
+            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
       - name: Frontend SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
