--- a/lab1/frontend/sonar-project.properties
+++ b/lab1/frontend/sonar-project.properties
@@ -9,3 +9,5 @@ sonar.exclusions=**/__tests__/**,**/*.test.ts,**/*.test.tsx
 
 # Code coverage report (from Jest)
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+sonar.branch.name=main
