Add quality gate to sonar qube analysis

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,11 +137,20 @@ jobs:
             -Dsonar.organization=chetter14 \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=$SONAR_TOKEN \
-            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+            -Dsonar.qualitygate.wait=true
 
-      - name: Frontend SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5
-        with:
-          projectBaseDir: ./lab1/frontend
+      - name: Frontend SonarCloud Scan
+        working-directory: ./lab1/frontend
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          npm install -g sonar-scanner
+          sonar-scanner \
+            -Dsonar.projectKey=chetter14_devops_frontend \
+            -Dsonar.organization=chetter14 \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.qualitygate.wait=true
+
+        
