--- a/lab1/prometheus.yml
+++ b/lab1/prometheus.yml
@@ -1,10 +1,9 @@
 global:
-  scrape_interval: 5s
+  scrape_interval: 15s
 
 scrape_configs:
-  - job_name: "backend"
-    metrics_path: /actuator/prometheus
+  - job_name: 'library-app'
+    metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ["itmo-devops-library-backend-vl-container:8080"]
-
+      - targets: ['localhost:8080']  # Or your actual host/port
 
