--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,41 +72,6 @@ jobs:
           name: frontend-coverage
           path: lab1/frontend/coverage/lcov.info
     
-  push_to_registry:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    needs: sonar_qube
-    permissions:
-      packages: write
-      contents: read
-      attestations: write
-      id-token: write
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-     
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./lab1/backend
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/itmo-devops-library-backend-vl:latest
-
-      - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./lab1/frontend
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/itmo-devops-library-frontend-vl:latest
-
   sonar_qube:
     needs: test
     runs-on: ubuntu-latest
@@ -153,8 +118,43 @@ jobs:
             -Dsonar.login=$SONAR_TOKEN \
             -Dsonar.qualitygate.wait=true
 
-  deploy:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
     needs: sonar_qube
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+     
+      - name: Build and push backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./lab1/backend
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/itmo-devops-library-backend-vl:latest
+
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./lab1/frontend
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/itmo-devops-library-frontend-vl:latest
+
+  deploy:
+    needs: push_to_registry
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
