--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,6 +167,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~
+            rm -rf app_deploy
             mkdir app_deploy
 
       - name: Copy files via SCP
@@ -177,4 +178,17 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "kubernetes/configs/*"
           target: "~/app_deploy"
-        
+
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.YC_VM_IP }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ~/app_deploy
+            sudo kubectl apply -f .
+            sudo kubectl scale deployment frontend --replicas=1
+            sudo kubectl scale deployment backend --replicas=1
+            sudo kubectl scale deployment postgres --replicas=1
+            sudo kubectl scale deployment prometheus --replicas=1
