--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -179,17 +179,6 @@ jobs:
           source: "kubernetes/configs/*"
           target: "~/app_deploy"
 
-      - name: Verify files were copied
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.YC_VM_IP }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            echo "Check if files are copied:"
-            ls -la ~/app_deploy/kubernetes/configs/
-            sleep 3  # Small delay to ensure file writing is complete
-
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -200,6 +189,8 @@ jobs:
             cd ~/app_deploy/kubernetes/configs
             sudo kubectl delete deployments --all
             sudo kubectl apply -f .
+            # Apply Metrics Server
+            sudo kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
             sudo kubectl scale deployment frontend --replicas=1
             sudo kubectl scale deployment backend --replicas=1
             sudo kubectl scale deployment postgres --replicas=1
