--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,10 +191,11 @@ jobs:
             cd ~/app_deploy/kubernetes/configs
             sudo kubectl delete deployments --all
             sudo kubectl apply -f .
-            envsubst < ./prometheus-config.yaml | kubectl apply -f -
+            sudo envsubst < ./prometheus-config.yaml | kubectl apply -f -
             # Apply Metrics Server
             sudo kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
             sudo kubectl scale deployment frontend --replicas=1
             sudo kubectl scale deployment backend --replicas=1
             sudo kubectl scale deployment postgres --replicas=1
             sudo kubectl scale deployment prometheus --replicas=1
+            sudo kubectl logs deploy/prometheus
