Adjust env var token handling

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -187,6 +187,7 @@ jobs:
           host: ${{ secrets.YC_VM_IP }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          envs: YC_PROM_KEY
           script: |
             cd ~/app_deploy/kubernetes/configs
             sudo kubectl delete deployments --all
