--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -192,6 +192,7 @@ jobs:
             cd ~/app_deploy/kubernetes/configs
             sudo kubectl delete deployments --all
             sudo kubectl apply -f .
+            sudo envsubst < ./prometheus-config.yaml
             sudo envsubst < ./prometheus-config.yaml | sudo kubectl apply -f -
             # Apply Metrics Server
             sudo kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
@@ -199,4 +200,5 @@ jobs:
             sudo kubectl scale deployment backend --replicas=1
             sudo kubectl scale deployment postgres --replicas=1
             sudo kubectl scale deployment prometheus --replicas=1
+            sleep 10
             sudo kubectl logs deploy/prometheus
