--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -190,8 +190,8 @@ jobs:
             export YC_PROM_KEY="${{ secrets.YC_PROM_KEY }}"
             sudo kubectl delete deployments --all
             sudo kubectl apply -f .
-            sudo envsubst < ./prometheus-config.yaml
-            sudo envsubst < ./prometheus-config.yaml | sudo kubectl apply -f -
+            sudo -E envsubst < ./prometheus-config.yaml
+            sudo -E envsubst < ./prometheus-config.yaml | sudo kubectl apply -f -
             # Apply Metrics Server
             sudo kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
             sudo kubectl scale deployment frontend --replicas=1
