--- a/kubernetes/configs/prometheus-config.yaml
+++ b/kubernetes/configs/prometheus-config.yaml
@@ -10,8 +10,13 @@ data:
     scrape_configs:
       - job_name: "backend"
         metrics_path: /actuator/prometheus
-        static_configs:
-          - targets: ["backend:8080"]
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          # Keep only pods with the right label
+          - source_labels: [__meta_kubernetes_pod_label_io_kompose_service]
+            action: keep
+            regex: backend
 
     remote_write:
       - url: 'https://monitoring.api.cloud.yandex.net/prometheus/workspaces/mon4qajkk17258krfi6g/api/v1/write'
