--- a/lab1/backend/src/main/resources/application.properties
+++ b/lab1/backend/src/main/resources/application.properties
@@ -14,6 +14,9 @@ management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.security.enabled=true
 
+management.server.port=8080
+management.server.address=0.0.0.0
+
 management.metrics.export.prometheus.enabled=true
 
 
