--- a/kubernetes/configs/prometheus-config.yaml
+++ b/kubernetes/configs/prometheus-config.yaml
@@ -11,9 +11,11 @@ data:
       - job_name: "backend"
         metrics_path: /actuator/prometheus
         kubernetes_sd_configs:
+        - role: pod
+          selectors:
           - role: pod
+            label: "io.kompose.service=backend"
         relabel_configs:
-          # Keep only pods with the right label
           - source_labels: [__meta_kubernetes_pod_label_io_kompose_service]
             action: keep
             regex: backend
