--- a/lab1/backend/src/main/resources/application.properties
+++ b/lab1/backend/src/main/resources/application.properties
@@ -8,8 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.security.enabled=true
