--- a/kubernetes/configs/prometheus-config.yaml
+++ b/kubernetes/configs/prometheus-config.yaml
@@ -1,4 +1,3 @@
-apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
@@ -12,7 +11,15 @@ data:
         metrics_path: /actuator/prometheus
         kubernetes_sd_configs:
         - role: pod
-
+        relabel_configs:
+        - source_labels: [__meta_kubernetes_pod_label_io_kompose_service]
+          action: keep
+          regex: backend
+        - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_port]
+          action: replace
+          target_label: __address__
+          regex: (.+)
+          replacement: $1:8080  # or whatever port your Spring Boot pod exposes
     remote_write:
       - url: 'https://monitoring.api.cloud.yandex.net/prometheus/workspaces/mon4qajkk17258krfi6g/api/v1/write'
         bearer_token: "${YC_PROM_KEY}"
