--- a/kubernetes/configs/prometheus-rbac.yaml
+++ b/kubernetes/configs/prometheus-rbac.yaml
@@ -1,8 +1,11 @@
+# ServiceAccount for Prometheus
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus
+  namespace: default
 ---
+# RBAC rules (read pods, services, endpoints, etc.)
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -11,11 +14,19 @@ rules:
 - apiGroups: [""]
   resources:
   - nodes
+  - nodes/proxy
   - services
   - endpoints
   - pods
   verbs: ["get", "list", "watch"]
+- apiGroups: ["extensions"]
+  resources:
+  - ingresses
+  verbs: ["get", "list", "watch"]
+- nonResourceURLs: ["/metrics"]
+  verbs: ["get"]
 ---
+# Bind the ClusterRole to the ServiceAccount
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
