--- a/kubernetes/configs/backend-deployment.yaml
+++ b/kubernetes/configs/backend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8080"  
-        prometheus.io/path: "/metrics"
+        prometheus.io/path: "/actuator/prometheus"
         kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
