--- a/kubernetes/configs/prometheus-config.yaml
+++ b/kubernetes/configs/prometheus-config.yaml
@@ -8,19 +8,22 @@ data:
       scrape_interval: 5s
 
     scrape_configs:
-      - job_name: "kubernetes-pods"
-        metrics_path: /actuator/prometheus
+      - job_name: "backend"
         kubernetes_sd_configs:
         - role: pod
         relabel_configs:
-        - source_labels: [__meta_kubernetes_pod_label_io_kompose_service]
+        - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
           action: keep
-          regex: backend
-        - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_port]
+          regex: true
+        - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
           action: replace
-          target_label: __address__
+          target_label: __metrics_path__
           regex: (.+)
-          replacement: $1:8080
+        - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+          action: replace
+          regex: ([^:]+)(?::\d+)?;(\d+)
+          replacement: $1:$2
+          target_label: __address__
     remote_write:
       - url: 'https://monitoring.api.cloud.yandex.net/prometheus/workspaces/mon4qajkk17258krfi6g/api/v1/write'
         bearer_token: "${YC_PROM_KEY}"
