--- a/kubernetes/configs/prometheus-deployment.yaml
+++ b/kubernetes/configs/prometheus-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         io.kompose.service: prometheus
     spec:
+      serviceAccountName: prometheus
       containers:
       - name: prometheus
         image: prom/prometheus:latest
