--- a/lab1/backend/pom.xml
+++ b/lab1/backend/pom.xml
@@ -58,6 +58,13 @@
 			<version>1.2.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>6.8.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
