Update rest controller tests for tg bot

--- a/lab1/backend/src/test/resources/application.properties
+++ b/lab1/backend/src/test/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=
 spring.h2.console.enabled=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+TELEGRAM_BOT_TOKEN=dummy
+TELEGRAM_BOT_USERNAME=dummy
+TELEGRAM_CHAT_ID=dummy
