--- a/kubernetes/configs/backend-deployment.yaml
+++ b/kubernetes/configs/backend-deployment.yaml
@@ -35,6 +35,21 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: TELEGRAM_BOT_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: telegram-bot-secrets
+              key: TELEGRAM_BOT_TOKEN
+        - name: TELEGRAM_BOT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: telegram-bot-secrets
+              key: TELEGRAM_BOT_USERNAME
+        - name: TELEGRAM_CHAT_ID
+          valueFrom:
+            secretKeyRef:
+              name: telegram-bot-secrets
+              key: TELEGRAM_CHAT_ID
         image: timur43/itmo-devops-library-backend-vl:latest
         imagePullPolicy: Always
         name: itmo-devops-library-backend-vl-container
