--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -192,8 +192,8 @@ jobs:
             export TELEGRAM_BOT_USERNAME="${{ secrets.TELEGRAM_BOT_USERNAME }}"
             export TELEGRAM_CHAT_ID="${{ secrets.TELEGRAM_CHAT_ID }}"
             
-            kubectl delete secret telegram-bot-secrets --ignore-not-found
-            kubectl create secret generic telegram-bot-secrets \
+            sudo kubectl delete secret telegram-bot-secrets --ignore-not-found
+            sudo kubectl create secret generic telegram-bot-secrets \
               --from-literal=TELEGRAM_BOT_TOKEN=$TELEGRAM_BOT_TOKEN \
               --from-literal=TELEGRAM_BOT_USERNAME=$TELEGRAM_BOT_USERNAME \
               --from-literal=TELEGRAM_CHAT_ID=$TELEGRAM_CHAT_ID
